# SRSdb

./: README.md  ai_processor.py  app.py  config.py  create_default_users.py  file_handler.py  models.py  pyproject.toml  routes.py
instance/: filestorage.db
smartfilevault/: ai_utils.py  app.py  database_utils.py  requirements.txt  supabase_utils.py
smartfilevault/templates/: dashboard.html  view.html
static/css/: custom.css
static/js/: app.js  preview.js
templates/: base.html  dashboard.html  error.html  file_details.html  index.html  login.html  preview.html  register.html
